--- a/index.html
+++ b/index.html
@@ -23,30 +23,32 @@
 
   <body>
     <header class="header">
-      <div class="conteiner">
+      <div class="conteiner header-container">
         <nav class="header-nav">
           <a class="header-logo" href="./index.html">
             Web<span class="header-logo2">Studio</span></a
           >
+
           <ul class="list menu-list">
-            <li>
+            <li class="menu-item">
               <a class="menu-link link current" href="./index.html">Студия</a>
             </li>
-            <li>
+            <li class="menu-item">
               <a class="menu-link link" href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
+            <li class="menu-item">
               <a class="menu-link link" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
-        <ul>
-          <li>
+
+        <ul class="header-connect">
+          <li class="connect-item">
             <a class="header-mail link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="connect-item">
             <a class="header-tel link" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
@@ -140,22 +142,31 @@
         </ul>
       </section>
     </main>
+    
     <footer class="footer">
-      <a class="logo" href="./index.html">
-        Web<span class="logo_part2_1">Studio</span></a
-      >
-      <div>
-        <p class="adress1">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-          <li>
-            <a class="adress2" href="mailto:info@example.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="adress2" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
+      <div class="conteiner">
+        <div class="footer-logo-container">
+          <a class="footer-logo" href="./index.html">
+            Web<span class="footer-logo2">Studio</span></a
+          >
+        </div>
+        <address class="adress">
+          <p class="footer-adress">
+            г. Киев, пр-т Леси Украинки, 26
+          </p>
+          <ul>
+            <li class="adress-item">
+              <a class="footer-mail" href="mailto:info@example.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-item">
+              <a class="footer-tel" href="tel:+380991111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </adress>
       </div>
     </footer>
   </body>
