--- a/portfolio.html
+++ b/portfolio.html
@@ -10,42 +10,58 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
   </head>
 
   <body>
-    <header>
-      <nav>
-        <a class="logo" href="./index.html">
-          Web<span class="logo_part2">Studio</span></a
-        >
-        <ul>
-          <li>
-            <a class="navigation" href="./index.html">Студия</a>
+    <header class="header">
+      <div class="conteiner header-container">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html">
+            Web<span class="header-logo2">Studio</span></a
+          >
+
+          <ul class="list menu-list">
+            <li class="menu-item">
+              <a class="menu-link link" href="./index.html">Студия</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link current" href="./portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li class="menu-item">
+              <a class="menu-link link" href="#">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="header-connect">
+          <li class="connect-item">
+            <a class="header-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a class="navigation-current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li>
-            <a class="navigation" href="#">Контакты</a>
+          <li class="connect-item">
+            <a class="header-tel link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
-      </nav>
-      <ul>
-        <li>
-          <a class="adress2" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="adress2" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
       <!--Filter_panel-->
+      <h1 class="visually-hidden"> Портфолио</h1>
       <section>
         <h2>Наши работы</h2>
         <ul>
@@ -120,22 +136,31 @@
         </ul>
       </section>
     </main>
+
     <footer class="footer">
-      <a class="logo" href="./index.html">
-        Web<span class="logo_part2_1">Studio</span></a
-      >
-      <div>
-        <p class="adress1">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-          <li>
-            <a class="adress2" href="mailto:info@example.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="adress2" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
+      <div class="conteiner">
+        <div class="footer-logo-container">
+          <a class="footer-logo" href="./index.html">
+            Web<span class="footer-logo2">Studio</span></a
+          >
+        </div>
+        <address class="adress">
+          <p class="footer-adress">
+            г. Киев, пр-т Леси Украинки, 26
+          </p>
+          <ul>
+            <li class="adress-item">
+              <a class="footer-mail" href="mailto:info@example.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="adress-item">
+              <a class="footer-tel" href="tel:+380991111111"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </adress>
       </div>
     </footer>
   </body>
