--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <body>
     <header class="header">
-      <div class="conteiner header-container">
+      <div class="container header-container">
         <nav class="header-nav">
           <a class="header-logo" href="./index.html">
             Web<span class="header-logo2">Studio</span></a
@@ -58,93 +58,110 @@
     </header>
 
     <main>
-      <!--banner-->
-      <section class="hero">
-        <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
-        <button class="order" type="button">Заказать услугу</button>
-      </section>
-
-      <!--Section_1-->
+      <!--Герой-->
       <section>
-        <!-- <h2>Особенности</h2> -->
-        <ul>
-          <li>
-            <h3 class="skills">Внимание к деталям</h3>
-            <p class="skills-info">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="skills">Пунктуальность</h3>
-            <p class="skills-info">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="skills">Планирование</h3>
-            <p class="skills-info">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="skills">Современные технологии</h3>
-            <p class="skills-info">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="hero hero-container">                         
+          <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
+          <button class="order" type="button">Заказать услугу</button>     
+         </div>
+      </section>      
+
+      <!--Особенности-->
+       <section>
+        <div class="container skills-container">       
+          <h2 class="visually-hidden ">Особенности</h2>
+          <ul class="skills-list">
+            <li class="skills-item">
+              <h3 class="skills-title">Внимание к деталям</h3>
+              <p class="skills-info">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="skills-title">Пунктуальность</h3>
+              <p class="skills-info">
+                Задача организации, в особенности же рамки и место обучения кадров
+                влечет за собой.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="skills-title">Планирование</h3>
+              <p class="skills-info">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="skills-item">
+              <h3 class="skills-title">Современные технологии</h3>
+              <p class="skills-info">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>        
+       </div>
       </section>
 
-      <!--Section_work-->
+      <!--Наша работа-->
       <section>
-        <h2 class="type-h2">Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img src="./images/work_1.jpg" width="370" alt="занятие 1" />
-          </li>
-          <li>
-            <img src="./images/work_2.jpg" width="370" alt="занятие 2" />
-          </li>
-          <li>
-            <img src="./images/work_3.jpg" width="370" alt="занятие 3" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="work-header">Чем мы занимаемся</h2>
+          <ul class="work-list">
+            <li class="work-item">
+              <img src="./images/work_1.jpg" width="370" alt="занятие 1" />
+            </li>
+            <li class="work-item">
+              <img src="./images/work_2.jpg" width="370" alt="занятие 2" />
+            </li>
+            <li class="work-item">
+              <img src="./images/work_3.jpg" width="370" alt="занятие 3" />
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <!--Section_team-->
-      <section class="team">
-        <h2 class="type-h2">Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/team_1.jpg" width="270" alt="Игорь" />
-            <h3 class="team-memb-name">Игорь Демьяненко</h3>
-            <p lang="en" class="team-position">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team_2.jpg" width="270" alt="Ольга" />
-            <h3 class="team-memb-name">Ольга Репина</h3>
-            <p lang="en" class="team-position">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/team_3.jpg" width="270" alt="Николай" />
-            <h3 class="team-memb-name">Николай Тарасов</h3>
-            <p lang="en" class="team-position">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/team_4.jpg" width="270" alt="Михаил" />
-            <h3 class="team-memb-name">Михаил Ермаков</h3>
-            <p lang="en" class="team-position">UI Designer</p>
-          </li>
-        </ul>
+      <!--Наша команда-->
+      <section class="team-container">
+        <div class="container">
+          <h2 class="team-header">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img src="./images/team_1.jpg" 
+              alt="Игорь" />
+              <div class="team-text-group"><h3 class="team-memb-name">Игорь Демьяненко</h3>
+              <p lang="en" class="team-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/team_2.jpg" 
+              alt="Ольга" />
+              <div class="team-text-group">
+              <h3 class="team-memb-name">Ольга Репина</h3>
+              <p lang="en" class="team-position">Frontend Developer</p></div>
+            </li>
+            <li class="team-item">
+              <img src="./images/team_3.jpg" 
+              alt="Николай" />
+              <div class="team-text-group">
+              <h3 class="team-memb-name">Николай Тарасов</h3>
+              <p lang="en" class="team-position">Marketing</p></div>
+            </li>
+            <li class="team-item">
+              <img src="./images/team_4.jpg" 
+              alt="Михаил" />
+              <div class="team-text-group">
+              <h3 class="team-memb-name">Михаил Ермаков</h3>
+              <p lang="en" class="team-position">UI Designer</p></div>
+            </li>
+          </ul>
+        </div>
       </section>
+      
     </main>
     
     <footer class="footer">
-      <div class="conteiner">
+      <div class="container">
         <div class="footer-logo-container">
           <a class="footer-logo" href="./index.html">
             Web<span class="footer-logo2">Studio</span></a
