--- a/portfolio.html
+++ b/portfolio.html
@@ -22,8 +22,8 @@
   </head>
 
   <body>
-    <header class="header">
-      <div class="conteiner header-container">
+   <header class="header">
+      <div class="container header-container">
         <nav class="header-nav">
           <a class="header-logo" href="./index.html">
             Web<span class="header-logo2">Studio</span></a
@@ -34,9 +34,7 @@
               <a class="menu-link link" href="./index.html">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link current" href="./portfolio.html"
-                >Портфолио</a
-              >
+              <a class="menu-link link current" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="menu-item">
               <a class="menu-link link" href="#">Контакты</a>
@@ -138,7 +136,7 @@
     </main>
 
     <footer class="footer">
-      <div class="conteiner">
+      <div class="container">
         <div class="footer-logo-container">
           <a class="footer-logo" href="./index.html">
             Web<span class="footer-logo2">Studio</span></a
