--- a/portfolio.html
+++ b/portfolio.html
@@ -58,81 +58,99 @@
     </header>
 
     <main>
-      <!--Filter_panel-->
-      <h1 class="visually-hidden"> Портфолио</h1>
-      <section>
-        <h2>Наши работы</h2>
-        <ul>
-          <li><button class="active-button" type="button">Все</button></li>
-          <li><button class="order2" type="button">Веб-сайты</button></li>
-          <li><button class="order2" type="button">Приложения</button></li>
-          <li><button class="order2" type="button">Дизайн</button></li>
-          <li><button class="order2" type="button">Маркетинг</button></li>
-        </ul>
-      </section>
+      <div class="container">
+        <!--Фильтр работ-->
+        <h1 class="visually-hidden"> Портфолио</h1>
+        <section>
+          <h2 class="visually-hidden">Наши работы</h2>
+          <div class="our-filters">
+            <ul class="filter">
+              <li class="item">
+                <button class="active-button button" type="button">
+                  Все
+                </button>
+              </li>
+              <li class="item">
+                <button class="order2 button" type="button">Веб-сайты</button>
+              </li>
+              <li class="item">
+                <button class="order2 button" type="button">Приложения</button>
+              </li>
+              <li class="item">
+                <button class="order2 button" type="button">Дизайн</button>
+              </li>
+              <li class="item">
+                <button class="order2 button" type="button">Маркетинг</button>
+              </li>
+            </ul>
+          </div>          
+        </section>
 
-      <!--portfolio-->
-      <section>
-        <ul>
-          <li>
-            <img src="./images/prj1.jpg" alt="Технокряк" />
-            <h2 class="project-title">Технокряк</h2>
-            <p class="project-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/prj2.jpg"
-              width="370"
-              alt="New Orlean vs Golden Star"
-            />
-            <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-            <p class="project-text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/prj3.jpg" width="370" alt="Ресторан Seafood" />
-            <h2 class="project-title">Ресторан Seafood</h2>
-            <p class="project-text">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/prj4.jpg" width="370" alt="Проект Prime" />
-            <h2 class="project-title">Проект Prime</h2>
-            <p class="project-text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/prj5.jpg" width="370" alt="Проект Boxes" />
-            <h2 class="project-title">Проект Boxes</h2>
-            <p class="project-text">Приложение</p>
-          </li>
-          <li>
-            <img
-              src="./images/prj6.jpg"
-              width="370"
-              alt="Inspiration has no Borders"
-            />
-            <h2 class="project-title">Inspiration has no Borders</h2>
-            <p class="project-text">Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/prj7.jpg"
-              width="370"
-              alt="Издание Limited Edition"
-            />
-            <h2 class="project-title">Издание Limited Edition</h2>
-            <p class="project-text">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/prj8.jpg" width="370" alt="Проект LAB" />
-            <h2 class="project-title">Проект LAB</h2>
-            <p class="project-text">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/prj9.jpg" width="370" alt="Growing Business" />
-            <h2 class="project-title">Growing Business</h2>
-            <p class="project-text">Приложение</p>
-          </li>
-        </ul>
-      </section>
+        <!--portfolio-->
+        <section>
+          <div class="container-portfolio">
+              <ul class="portfolio-list">
+                <li class="portfolio-item">
+                  <img src="./images/prj1.jpg" alt="Технокряк" />
+                  <h2 class="project-title">Технокряк</h2>
+                  <p class="project-text">Веб-сайт</p>
+                </li>
+                <li class="portfolio-item">
+                  <img
+                    src="./images/prj2.jpg"
+                    width="370"
+                    alt="New Orlean vs Golden Star"
+                  />
+                  <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="project-text">Дизайн</p>
+                </li>
+                <li class="portfolio-item">
+                  <img src="./images/prj3.jpg" width="370" alt="Ресторан Seafood" />
+                  <h2 class="project-title">Ресторан Seafood</h2>
+                  <p class="project-text">Приложение</p>
+                </li>
+                <li class="portfolio-item">
+                  <img src="./images/prj4.jpg" width="370" alt="Проект Prime" />
+                  <h2 class="project-title">Проект Prime</h2>
+                  <p class="project-text">Маркетинг</p>
+                </li>
+                <li class="portfolio-item">
+                  <img src="./images/prj5.jpg" width="370" alt="Проект Boxes" />
+                  <h2 class="project-title">Проект Boxes</h2>
+                  <p class="project-text">Приложение</p>
+                </li>
+                <li class="portfolio-item">
+                  <img
+                    src="./images/prj6.jpg"
+                    width="370"
+                    alt="Inspiration has no Borders"
+                  />
+                  <h2 class="project-title">Inspiration has no Borders</h2>
+                  <p class="project-text">Веб-сайт</p>
+                </li>
+                <li class="portfolio-item">
+                  <img
+                    src="./images/prj7.jpg"
+                    width="370"
+                    alt="Издание Limited Edition"
+                  />
+                  <h2 class="project-title">Издание Limited Edition</h2>
+                  <p class="project-text">Дизайн</p>
+                </li>
+                <li class="portfolio-item">
+                  <img src="./images/prj8.jpg" width="370" alt="Проект LAB" />
+                  <h2 class="project-title">Проект LAB</h2>
+                  <p class="project-text">Маркетинг</p>
+                </li>
+                <li class="portfolio-item">
+                  <img src="./images/prj9.jpg" width="370" alt="Growing Business" />
+                  <h2 class="project-title">Growing Business</h2>
+                  <p class="project-text">Приложение</p>
+                </li>
+              </ul>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
