--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     <main>
       <!--Герой-->
-      <section>
-        <div class="hero hero-container">                         
+      <section class="hero-container">
+        <div class="hero">                         
           <h1 class="banner">Эффективные решения для вашего бизнеса</h1>
           <button class="order" type="button">Заказать услугу</button>     
          </div>
@@ -122,8 +122,8 @@
       </section>
 
       <!--Наша команда-->
-      <section>
-        <div class="container team-container">
+      <section class="team-container">
+        <div class="container">
           <h2 class="team-header">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
